# pyexp

./: .claudepod  .gitignore  .pyexp-requirements.txt  README.md  main.py  pyproject.toml
.claude/: claude.md
benchmarks/: benchmark_formats.py
examples/: basic.py  basic_report.py  chkpt.py  classes.py  config.py  configs.py  demo_logs.py  demo_logs_report.py  executor.py  failing.py  flow.py  marimo_report.py  pipeline.py  sweep.py  task.py  with_artifacts.py
src/pyexp/: __init__.py  _viewer.py  _viewer_app.py  config.py  database.py  event_file.py  events.proto  events_pb2.py  executors.py  experiment.py  flow.py  log.py  runner.py  task.py  utils.py  worker.py
src/pyexp/viewer/: __init__.py  __main__.py
src/runner/: __init__.py
tests/: test_config.py  test_database.py  test_experiment.py  test_flow.py  test_fn_runner.py  test_log.py  test_merge.py  test_runs.py  test_ssh_executor.py  test_sweep.py  test_task.py  test_tensor.py
