[project]
name = "pyexp"
version = "0.1.0"
description = "A library for running Python experiments with config, experiment, and report phases"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyexp"]
