[project]
name = "pyexp"
version = "0.1.0"
description = "A library for running Python experiments with config, experiment, and report phases"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyexp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
