[project]
name = "pyexp"
version = "0.1.0"
description = "A library for running Python experiments with config, experiment, and report phases"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["cloudpickle>=3.0", "pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
ray = ["ray>=2.0"]
viewer = ["solara[server]>=1.0", "matplotlib>=3.0", "ipympl>=0.9", "plotly>=5.0", "anywidget>=0.9"]

[project.scripts]
pyexp-viewer = "pyexp._viewer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyexp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
